Refactor deployment script from Python 3.x to 2.7
- Add deploy/deploy.sh to .gitignore -- don't want to accidentally
  commit server configuration information.

- Remove runtime.txt, no longer using Heroku to deploy.

--- a/deploy/apache/virtualhost.conf
+++ b/deploy/apache/virtualhost.conf
@@ -2,13 +2,15 @@
         ServerName {{ SERVER_NAME }}
         WSGIScriptAlias / {{ INSTALL_DIR }}/app.wsgi
         <Directory {{ INSTALL_DIR }}/app/>
-                Order allow,deny
-                Allow from all
+                Options All
+                AllowOverride All
+                Require all granted
         </Directory>
         Alias /static {{ INSTALL_DIR }}/app/static
         <Directory {{ INSTALL_DIR }}/app/static/>
-                Order allow,deny
-                Allow from all
+                Options All
+                AllowOverride All
+                Require all granted
         </Directory>
         ErrorLog ${APACHE_LOG_DIR}/error.log
         LogLevel warn
